# Creative

./: .env.example  .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: globals.css  layout.tsx
src/app/agencies/: page.tsx
src/app/allotment/: page.tsx
src/app/billing/: page.tsx
src/app/channel-sync/: page.tsx
src/app/dashboard/: page.tsx
src/app/front-desk/: page.tsx
src/app/guests/: page.tsx
src/app/housekeeping/: page.tsx
src/app/login/: page.tsx
src/app/manager-report/: page.tsx
src/app/night-audit/: page.tsx
src/app/rate-plans/: page.tsx
src/app/reports/: page.tsx
src/app/reservation-grid/: page.tsx
src/app/reservations/: page.tsx
src/app/rooms/: page.tsx
src/app/settings/: page.tsx
src/app/staff/: layout.tsx  page.tsx  staff-context.tsx
src/hooks/: useOfflineSync.ts
src/lib/: auth-context.tsx  auth-service.ts  auth.ts  backup-service.ts  channel-manager.ts  data-service.ts  database.types.ts  einvoice-service.ts  group-reservation-service.ts  hotel-settings.ts  kbs-service.ts  license-service.ts  mock-data.ts  night-audit-service.ts  notification-service.ts  offline-sync.ts  payment-gateway.ts  print-utils.ts  rate-service.ts  staff-service.ts  supabase-server.ts  supabase.ts  types.ts  utils.ts
supabase/: notifications-table.sql  schema.sql  setup.sql  staff-tables.sql
(+16 files in other folders)
