[package]
name = "creative-pms"
version = "1.0.0"
description = "Creative PMS - Otel Yönetim Sistemi"
authors = ["Creative PMS"]
edition = "2021"

[lib]
name = "creative_pms_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
